POST new job and GET list all now working :)
